--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
             </ul>
                 <a href="/" class="nav__logo">
                     <picture class="nav-logo__picture">
-                    <source srcset="./images/logo1.png 1x, ./images/logo2.png 2x" media="(max-width: 41.625rem)" class="nav-logo__source">
-                    <source srcset="./images/desktop/desklogo.png 1x, ./images/desktop/desklogo2.png 2x" media="(min-width: 41.626rem)" class="nav-logo__source">
+                    <source srcset="./images/logo1.png 1x, ./images/logo2.png 2x" media="(max-width: 79.9rem)" class="nav-logo__source">
+                    <source srcset="./images/desktop/desklogo.png 1x, ./images/desktop/desklogo2.png 2x" media="(min-width: 80rem)" class="nav-logo__source">
                     <img src="./images/desktop/desklogo2.png" media="(min-width: 41.626rem)" alt="logo" class="nav-logo__img">
                 </picture>
                 </a>
@@ -151,9 +151,9 @@
                 <div class="month-list__picture-wrap">
                     <picture class="month-list__item-picture">
                         <source srcset=" ./images/month2-1.jpg 1x, ./images/month2-2.jpg 2x" media="(max-width: 41.625rem)" class="month-list__item-source">
-                        <source srcset="./images/desktop/deskmonth1-2.jpg 1x, ./images/desktop/deskmonth2-2.jpg 2x" media="(min-width: 41.626rem)">
+                        <source srcset="./images/desktop/deskmonth2-1.jpg 1x, ./images/desktop/deskmonth2-2.jpg 2x" media="(min-width: 41.626rem)">
                     </picture>
-                    <img src="./images/desktop/deskmonth2-2.jpg" srcset="./images/desktop/deskmonth1-2.jpg 1x, ./images/desktop/deskmonth2-2.jpg 2x" alt="unboxing2" class="month-list__item-img">
+                    <img src="./images/desktop/deskmonth2-2.jpg" srcset="./images/desktop/deskmonth2-2.jpg 1x, ./images/desktop/deskmonth2-2.jpg 2x" alt="unboxing2" class="month-list__item-img">
                 </div>
                 <div class="month-absolute__light-ellipse"><object data="./svg/month-ellipse.svg" class="month-absolute__light-ellipse"></object></div>
                 <div class="month-absolute__blue-ellipse"><object data="./svg/month-blue-ellipse.svg" class="month-absolute__blue-ellipse"></object></div>
@@ -168,10 +168,18 @@
                 sed do eiusmod <br /> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim <br /> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea <br /> commodo consequat. Duis aute irure dolor 
                 in reprehenderit in voluptate <br /> velit esse cillum dolore eu fugiat nulla pariatur. 
                 Excepteur sint occaecat <br /> cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id <br /> est laborum </p>
-            <button type="button" class="month__desk-button button">See what's inside</button>
+            <div class="month__leaf-wrap"><button type="button" class="month__desk-button button">See what's inside</button>
+                <div class="month__abs-leaf">
+                    <picture>
+                        <source srcset=" ./images/desktop/monthleaf1.png 1x, ./images/desktop/monthleaf2.png 2x" media="(min-width: 80rem)">
+                        <img src="./images/desktop/monthleaf2.png" srcset=" ./images/desktop/monthleaf1.png 1x, ./images/desktop/monthleaf2.png 2x" alt="leaf">
+                    </picture>
+                </div>
             </div>
-        <div class="month__button-wrap"><button type="button" class="month-button button">See what's inside</button></div>
         </div>
+        <div class="month__button-wrap"><button type="button" class="month-button button">See what's inside</button></div>
+        
+    </div>
     </section>
         <!-- <section class="mission">
             <div class="container">
