--- a/src/index.html
+++ b/src/index.html
@@ -289,15 +289,18 @@
         </div>
     </div>
     </section>
-        <!-- <section class="blog">
+        <section class="blog">
             <div class="container">
             <h3 class="blog-title">What's new in blog?</h3>
-        <div class="blog__card">
+            <ul class="blog__list">
+                <li class="blog__list-item">
+                    <div class="blog__card">
             <div class="blog__image-wrap">
-            <picture class="blog__picture">
-                <source class="blog__source" srcset="./images/blog1.jpg 1x, ./images/blog2.jpg 2x" class="blog__source">
+            <picture>
+                <source class="blog__source" srcset="./images/blog1.jpg 1x, ./images/blog2.jpg 2x" media="(max-width: 41.625rem)">
+                <source class="blog__source" srcset="./images/desktop/deskblog1-1.jpg 1x, ./images/desktop/deskblog1-2.jpg 2x" media="(min-width: 41.626rem)">
+                <img src="./images/desktop/deskblog1-2.jpg" srcset="./images/desktop/deskblog1-1.jpg 1x, ./images/desktop/deskblog1-2.jpg 2x" alt="flowers and box">
             </picture>
-            <img src="./images/blog1.jpg" srcset="./images/blog1.jpg 1x, ./images/blog2.jpg 2x" alt="flowers and box" class="blog__img">
             </div>
             <div class="blog__text-wrap">
             <h4 class="blog-title-smaller">Why KIWI Eco Box?</h4>
@@ -306,11 +309,46 @@
             <button type="button" class="blog__button"><span>Read more</span><div class="blog__plus-wrap"><svg class="blog__plus-icon" width="0.5rem" height="0.5rem"><use href="./svg/icons.svg#icon-plus" /></svg></div></button>
             </div>
         </div>
+    </li>
+                <li class="blog__list-item">
+                    <div class="blog__card">
+            <div class="blog__image-wrap">
+            <picture>
+                <source srcset="./images/desktop/deskblog2-1.jpg 1x, ./images/desktop/deskblog2-2.jpg 2x">
+                <img src="./images/desktop/deskblog2-2.jpg" srcset="./images/desktop/deskblog2-1.jpg 1x, ./images/desktop/deskblog2-2.jpg 2x" alt="flowers and box">
+            </picture>
+            </div>
+            <div class="blog__text-wrap">
+            <h4 class="blog-title-smaller">Why KIWI Eco Box?</h4>
+            <div class="blog__svg-wrap"><object data="./svg/reuseline.svg" width="3.75rem" height="0.312rem" class="reusable-line"></object></div>
+            <p class="blog-text">Get started by signing up for monthly subscription. We bring you an easy way to start your zero-waste journey</p>
+            <button type="button" class="blog__button"><span>Read more</span><div class="blog__plus-wrap"><svg class="blog__plus-icon" width="0.5rem" height="0.5rem"><use href="./svg/icons.svg#icon-plus" /></svg></div></button>
+            </div>
+        </div>
+    </li>
+                <li class="blog__list-item">
+                    <div class="blog__card">
+            <div class="blog__image-wrap">
+            <picture>
+                <source srcset="./images/desktop/deskblog3-1.jpg 1x, ./images/desktop/deskblog3-2.jpg 2x">
+                <img src="./images/desktop/deskblog3-2.jpg" srcset="./images/desktop/deskblog3-1.jpg 1x, ./images/desktop/deskblog3-2.jpg 2x" alt="flowers and box">
+            </picture>
+            </div>
+            <div class="blog__text-wrap">
+            <h4 class="blog-title-smaller">Why KIWI Eco Box?</h4>
+            <div class="blog__svg-wrap"><object data="./svg/reuseline.svg" width="3.75rem" height="0.312rem" class="reusable-line"></object></div>
+            <p class="blog-text">Get started by signing up for monthly subscription. We bring you an easy way to start your zero-waste journey</p>
+            <button type="button" class="blog__button"><span>Read more</span><div class="blog__plus-wrap"><svg class="blog__plus-icon" width="0.5rem" height="0.5rem"><use href="./svg/icons.svg#icon-plus" /></svg></div></button>
+            </div>
+        </div>
+    </li>
+            </ul>
         <ul class="blog__lines-list"><li class="blog__lines-item"><div class="blog__lines-line"></div></li>
         <li class="blog__lines-item"><div class="blog__lines-line"></div></li>
         <li class="blog__lines-item"><div class="blog__lines-line"></div></li></ul>
         </div>
-    </section> -->
+        <div><object data="./svg/blog-big-line.svg" class="blog-big-line"></object></div>
+    </section>
         <!-- <section class="inbox">
             <div class="container">
             <div class="inbox__svg-wrap"><object data="./svg/reuseline.svg" width="3.75rem" height="0.312rem" class="reusable-line"></object></div>
